--- a/style.css
+++ b/style.css
@@ -1,9 +1,35 @@
+@font-face {
+    font-family: "Coffee";
+    src: url(fonts/CoffeetinInitials-YXJ2.ttf) format('truetype');
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url('img/dessert.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    font-family: "Coffee";
+    font-size: 24px;
 }
 
 canvas {
     background-color: black;
+}
+
+#fullscreen {
+    position: relative;
+}
+
+#btn-box {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+#btn-box img {
+    width: 20px;
+    padding: 10px;
 }
