--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    position: relative;
 }
 
 h1 {
@@ -53,7 +52,8 @@ canvas {
 }
 
 .startImg{ 
-    width: 80%;
+    width: 720px;
+    height: 480px;
 }
 
 .playImg{
@@ -61,6 +61,37 @@ canvas {
     z-index: 5;
     cursor: pointer;
     top: 200px;
+}
+
+.game-over{
+    z-index: 1;
+    width: 720px;
+    height: 480px;
+    position: absolute;
+}
+
+.retry-btn{
+    position: absolute;
+    bottom: 30px;
+    left: calc(100vw / 2 - 120px);
+    z-index: 2;
+    cursor: pointer;
+    background-color: #FFCB00;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 120px;
+    height: 30px;
+    border: 1.5px solid #ff8400;
+}
+.retry-btn:hover{
+    background-color: #ffdd2c;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
+.retryIcon{
+    width: 20px;
 }
 
 @media only screen and (max-width: 720px){
