--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ canvas {
     display: flex;
     justify-content: flex-end;
     width: 100%;
+    z-index: 1;
 }
 
 #btn-box img {
@@ -71,7 +72,7 @@ canvas {
 }
 
 .startNavigationIcon{
-    width: 50px;
+    width: 40px;
     padding-left: 10px;
     cursor: pointer;
     z-index: 2;
@@ -94,12 +95,34 @@ canvas {
     z-index: 5;
     cursor: pointer;
 }
+#game-over{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.key-legend{
+    z-index: 1;
+    width: 80%;
+    position: absolute;
+    backdrop-filter: blur(10px);
+}
 
 .game-over{
     z-index: 1;
-    width: 720px;
-    height: 480px;
+    width: 100%;
+    height: 100%;
     position: absolute;
+}
+
+.game-over-pic{
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .game-won{
@@ -110,7 +133,6 @@ canvas {
     justify-content: center;
     font-size: 52px;
     color: #ffdd2c;
-    padding-top: 100px;
 }
 
 #keyboard{
@@ -126,7 +148,6 @@ canvas {
 .retry-btn{
     position: absolute;
     bottom: 30px;
-    left: calc(100vw / 2 - 120px);
 }
 
 .btn{
@@ -162,7 +183,10 @@ canvas {
     position: absolute;
     width: 100%;
     height: 100%;
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(5px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 720px){
