--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ h1 {
 
 h2{
     font-weight: 100;
+    text-shadow: black 1px 1px 4px;
 }
 
 canvas {
@@ -171,6 +172,7 @@ canvas {
     position: absolute;
     top: 20px;
     right: 20px;
+    cursor: pointer;
 }
 
 .blur-background{
@@ -181,6 +183,9 @@ canvas {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.cursor{
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 720px){
