--- a/style.css
+++ b/style.css
@@ -215,6 +215,11 @@ canvas {
   padding: 4px;
 }
 
+.z-index-3{
+  z-index: 3;
+}
+
+
 @media only screen and (max-width: 720px) {
   canvas {
     width: 100%;
